--- a/brain_mri.ipynb
+++ b/brain_mri.ipynb
@@ -62,11 +62,9 @@
     "import yaml\n",
     "import torch\n",
     "import matplotlib.pyplot as plt\n",
-    "import json\n",
     "from google.colab import drive\n",
     "import os\n",
     "import pandas as pd\n",
-    "import sklearn\n",
     "\n",
     "from model.local_net import LocalNet\n",
     "from utils.model_utils import load_resnet_18_teacher_model\n",
@@ -74,11 +72,9 @@
     "from data_loader.localnet_data_loader import LocalNetDataModule\n",
     "from model.one_layer_decoder import OneLayerDecoder\n",
     "from model.dad import DADHead\n",
-    "from model.iad import iad_head\n",
     "from model.global_net import GlobalNet\n",
     "from data_loader.joint_training_data_loader import JointTrainingDataModule\n",
     "from training_module.joint_training_module import JointGlobalDADTrainingModule\n",
-    "from data_loader.inference_data_loader import InferenceDataModule\n",
     "from anomaly_detector import AnomalyDetector\n",
     "from data_loader.test_data_loader import TestDataModule\n",
     "\n",
@@ -152,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fine-tune Local-Net"
+    "# 1. Fine-tune Local-Net"
    ]
   },
   {
@@ -460,7 +456,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Train Global-Net and DAD-head"
+    "# 2. Train Global-Net and DAD-head"
    ]
   },
   {
@@ -786,52 +782,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualizing data created during inference"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Get file paths to all test images"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pathologies = [\n",
-    "        'absent_septum',\n",
-    "        'artefacts',\n",
-    "        'craniatomy',\n",
-    "        'dural',\n",
-    "        'ea_mass',\n",
-    "        'edema',\n",
-    "        'encephalomalacia',\n",
-    "        'enlarged_ventricles',\n",
-    "        'intraventricular',\n",
-    "        'lesions',\n",
-    "        'mass',\n",
-    "        'posttreatment',\n",
-    "        'resection',\n",
-    "        'sinus',\n",
-    "        'wml',\n",
-    "        'other'\n",
-    "    ]\n",
-    "\n",
-    "split_dir = \"./data/splits\"\n",
-    "\n",
-    "img_csvs = [os.path.join(split_dir, f'{pathology}.csv') for pathology in pathologies]\n",
-    "\n",
-    "test_file_paths = []\n",
-    "\n",
-    "for i in range(len(img_csvs)):\n",
-    "  test_file_paths += pd.read_csv(img_csvs[i])['filename'].tolist()\n",
-    "\n",
-    "print(test_file_paths)\n",
-    "print(len(test_file_paths))\n"
+    "# 3. Inference, and evaluating"
    ]
   },
   {
@@ -847,11 +798,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data_module = InferenceDataModule(\n",
-    "    test_file_paths, \n",
-    "    batch_size=4, \n",
-    "    num_workers=0, \n",
-    "    caching_strategy='none'\n",
+    "split_dir = \"/content/data/splits\"\n",
+    "\n",
+    "# omitting batch size allows for batch_size = size of test data \n",
+    "# (either all images, or images from one specific pathology)\n",
+    "# this makes the evaluation easier\n",
+    "test_data_module = TestDataModule(\n",
+    "    split_dir, \n",
     ")"
    ]
   },
@@ -859,6 +812,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "Display inference images"
    ]
   },
@@ -868,18 +822,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# make sure batch_size in test_data_module is equal to BATCH_SIZE\n",
+    "IMAGES_TO_DISPLAY=4\n",
     "\n",
-    "BATCH_SIZE=4\n",
+    "# ignore the pos_mask\n",
+    "images, _ = next(iter(test_data_module.test_dataloader_all()))\n",
     "\n",
-    "images = next(iter(test_data_module.test_dataloader()))\n",
+    "fig, ax = plt.subplots(1, IMAGES_TO_DISPLAY, figsize=(10, 10))\n",
     "\n",
-    "fig, ax = plt.subplots(1, 4, figsize=(10, 10))\n",
-    "\n",
-    "for i in range(4):\n",
+    "for i in range(IMAGES_TO_DISPLAY):\n",
     "  ax[i].imshow(images[i].permute(1, 2, 0).cpu().numpy())\n",
     "\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -930,21 +883,14 @@
     "    ax2[j][i].imshow(binary_masks[i+j*20].squeeze(0).cpu().numpy(), cmap='gray', interpolation='none')\n",
     "    #ax2[j][i].axis('off')\n",
     "\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create the Anomaly Detector"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Load all trained models"
+    "Create the Anomaly Detector"
    ]
   },
   {
@@ -956,7 +902,7 @@
     "# Assuming 'device' is either 'cuda' if a GPU is available, otherwise 'cpu'\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
-    "# Load all state dictionary from Google Drive\n",
+    "# Load all trained models\n",
     "local_state_dict = torch.load('/content/pretrained_models/local_net_finetuned_xray_v1.pth', map_location=device)\n",
     "global_state_dict = torch.load('/content/pretrained_models/global_net_xray_v1.pth', map_location=device)\n",
     "dad_state_dict = torch.load('/content/pretrained_models/dad_head_xray_v1.pth', map_location=device)\n",
@@ -987,7 +933,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anomaly_score_maps = anomaly_detector.detect_anomalies_batch(images)"
+    "anomaly_score_maps = anomaly_detector.detect_anomalies(images)"
    ]
   },
   {
@@ -1011,30 +957,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Evaluate on one specific pathology"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Create data loader"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "split_dir = \"/content/data/splits\"\n",
-    "test_data_module = TestDataModule(split_dir)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Display images and binary masks for one specific pathology"
    ]
   },
@@ -1044,7 +966,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "images, gt_masks = next(iter(test_data_module.test_dataloader(\"resection\")))\n",
     "\n",
     "SIZE = len(images)\n",
@@ -1084,7 +1005,6 @@
     "    ax[0][i].axis('off')\n",
     "    ax[1][i].axis('off')\n",
     "    \n",
-    "\n",
     "plt.show()"
    ]
   },
@@ -1092,7 +1012,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run evaluation"
+    "Run evaluation on all pathologies"
    ]
   },
   {
@@ -1101,8 +1021,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "images, gt_masks = next(iter(test_data_module.test_dataloader(\"resection\")))\n",
+    "images, gt_masks = next(iter(test_data_module.test_dataloader_all()))\n",
     "results = anomaly_detector.evaluate_performance(images, gt_masks)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot Precision-Recall curve and Receiver Operating Characteristics curve"
    ]
   },
   {
@@ -1112,47 +1039,20 @@
    "outputs": [],
    "source": [
     "precision, recall = results['PRC']\n",
-    "average_precision = results['AVG_PRECISION']\n",
+    "prc_auc = results['AUPRC']\n",
+    "anomaly_detector.plot_prc(precision, recall, prc_auc, \"all pathologies\")\n",
     "\n",
-    "# Plotting the Precision-Recall curve\n",
-    "plt.figure(figsize=(8, 6))\n",
-    "plt.plot(recall, precision, label=f'AP={average_precision:0.2f}')\n",
-    "plt.xlabel('Recall')\n",
-    "plt.ylabel('Precision')\n",
-    "plt.title('Precision-Recall curve')\n",
-    "plt.legend(loc='lower left')\n",
-    "plt.grid(True)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "fpr = results['FPR']\n",
     "tpr = results['TPR']\n",
     "roc_auc = results['AUROC']\n",
-    "# Plotting the ROC curve\n",
-    "plt.figure(figsize=(8, 6))\n",
-    "plt.plot(fpr, tpr, color='blue', label=f'ROC curve (area = {roc_auc:0.2f})')\n",
-    "plt.plot([0, 1], [0, 1], color='darkorange', linestyle='--')  # Diagonal line for reference\n",
-    "plt.xlim([0.0, 1.0])\n",
-    "plt.ylim([0.0, 1.05])\n",
-    "plt.xlabel('False Positive Rate')\n",
-    "plt.ylabel('True Positive Rate')\n",
-    "plt.title('Receiver Operating Characteristic (ROC) Curve')\n",
-    "plt.legend(loc='lower right')\n",
-    "plt.grid(True)\n",
-    "plt.show()"
+    "anomaly_detector.plot_roc(fpr, tpr, roc_auc, \"all pathologies\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get AUROC/Average precision per pathology"
+    "Get AUROC/AUPRC per pathology"
    ]
   },
   {
@@ -1185,21 +1085,12 @@
     "for pathology in pathologies:\n",
     "    images, gt_masks = next(iter(test_data_module.test_dataloader(pathology)))\n",
     "    results = anomaly_detector.evaluate_performance(images, gt_masks)\n",
-    "    results_json.append({'pathology': pathology, 'auroc': results['AUROC'], 'avg_precision': results['AVG_PRECISION']})\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch  # If not already imported\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
+    "    results_json.append({'pathology': pathology, 'auroc': results['AUROC'], 'auprc': results['AUPRC']})\n",
     "\n",
-    "images, gt_masks = next(iter(test_data_module.test_dataloader_all()))\n",
-    "results = anomaly_detector.detect_anomalies_batch(images.to(device))\n"
+    "for result in results_json:\n",
+    "    print(f\"Pathology: {result['pathology']}\")\n",
+    "    print(f\"AUROC: {result['auroc']}\")\n",
+    "    print(f\"AUPRC: {result['auprc']}\")\n"
    ]
   },
   {
@@ -1215,50 +1106,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import seaborn as sns\n",
+    "images, gt_masks = next(iter(test_data_module.test_dataloader_all()))\n",
+    "results = anomaly_detector.detect_anomalies(images.to(device))\n",
     "\n",
-    "# Let's assume 'results' is a list of numpy arrays, where each array corresponds to the anomaly scores of an image in the batch\n",
-    "# For example: results = [np.array([...]), np.array([...]), ...]\n",
-    "# And 'gt_masks' is a batch of ground truth masks with the same batch size as 'results'\n",
-    "\n",
-    "# Flatten the ground truth masks to match the anomaly scores\n",
-    "ground_truth_masks = gt_masks.numpy().flatten()\n",
-    "\n",
-    "# Flatten all anomaly score arrays to create a single array of scores\n",
-    "anomaly_scores = np.concatenate([scores.flatten() for scores in results])\n",
-    "\n",
-    "# Now, separate the scores based on the ground truth masks\n",
-    "scores_normal = anomaly_scores[ground_truth_masks == 0]\n",
-    "scores_abnormal = anomaly_scores[ground_truth_masks == 1]\n",
-    "\n",
-    "BINS = 100\n",
-    "\n",
-    "plt.figure(figsize=(8, 6))\n",
-    "\n",
-    "# Histogram for normal scores\n",
-    "sns.histplot(\n",
-    "    scores_normal,\n",
-    "    bins=BINS,\n",
-    "    kde=True,\n",
-    "    label=\"Normal\",\n",
-    "    color=\"#3d5a80\",\n",
-    ")\n",
-    "\n",
-    "# Histogram for abnormal scores\n",
-    "sns.histplot(\n",
-    "    scores_abnormal,\n",
-    "    bins=BINS,\n",
-    "    kde=True,\n",
-    "    label=\"Abnormal\",\n",
-    "    color=\"#ee6c4d\",\n",
-    ")\n",
-    "\n",
-    "plt.title(\"Histogram of Anomaly Scores\")\n",
-    "plt.xlim(left=0)\n",
-    "plt.xlabel(\"Anomaly Score\")\n",
-    "plt.ylabel(\"Density\")\n",
-    "plt.legend()\n",
-    "plt.show()\n"
+    "anomaly_detector.plot_histogram(results, gt_masks)"
    ]
   }
  ],
