Minor changes, moved logic from notebook to anomaly detector class

--- a/brain_mri.ipynb
+++ b/brain_mri.ipynb
@@ -924,7 +924,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get anomaly scores for each image in batch"
+    "Get anomaly scores for the first 8 images in batch"
    ]
   },
   {
@@ -933,7 +933,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anomaly_score_maps = anomaly_detector.detect_anomalies(images)"
+    "anomaly_score_maps = anomaly_detector.detect_anomalies(images[0:8])"
    ]
   },
   {
@@ -985,7 +985,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Display images and binary masks for all pathologies"
+    "Display 20 images and binary masks for all pathologies"
    ]
   },
   {
@@ -1022,14 +1022,14 @@
    "outputs": [],
    "source": [
     "images, gt_masks = next(iter(test_data_module.test_dataloader_all()))\n",
-    "results = anomaly_detector.evaluate_performance(images, gt_masks)"
+    "results, anomaly_scores = anomaly_detector.evaluate_performance(images, gt_masks, return_anomaly_scores=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot Precision-Recall curve and Receiver Operating Characteristics curve"
+    "Plot Precision-Recall curve and Receiver Operating Characteristics curve, and create histogram"
    ]
   },
   {
@@ -1045,7 +1045,9 @@
     "fpr = results['FPR']\n",
     "tpr = results['TPR']\n",
     "roc_auc = results['AUROC']\n",
-    "anomaly_detector.plot_roc(fpr, tpr, roc_auc, \"all pathologies\")"
+    "anomaly_detector.plot_roc(fpr, tpr, roc_auc, \"all pathologies\")\n",
+    "\n",
+    "anomaly_detector.plot_histogram(anomaly_scores, gt_masks, \"all pathologies\")"
    ]
   },
   {
@@ -1091,25 +1093,6 @@
     "    print(f\"Pathology: {result['pathology']}\")\n",
     "    print(f\"AUROC: {result['auroc']}\")\n",
     "    print(f\"AUPRC: {result['auprc']}\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Create histograms"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "images, gt_masks = next(iter(test_data_module.test_dataloader_all()))\n",
-    "results = anomaly_detector.detect_anomalies(images.to(device))\n",
-    "\n",
-    "anomaly_detector.plot_histogram(results, gt_masks)"
    ]
   }
  ],
