--- a/brain_mri.ipynb
+++ b/brain_mri.ipynb
@@ -20,7 +20,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Clone the repository\n",
     "!git clone https://github.com/beerger/mad_seminar_ws23.git\n",
     "# Move all content to the current directory\n",
@@ -88,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load train/val image paths"
+    "Load train/val image paths (Run only when you are going to fine-tune Local-Net or train Global-Net/DADHead)"
    ]
   },
   {
@@ -117,31 +116,6 @@
     "# Ensure that it's file paths\n",
     "print(train_file_paths)\n",
     "print(val_file_paths)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Load test image paths"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Specify the directory you want to list\n",
-    "train_directory = '/content/zipper/test/'\n",
-    "\n",
-    "test_file_paths = []\n",
-    "for root, dirs, files in os.walk(train_directory, topdown=False):\n",
-    "   for name in files:\n",
-    "      test_file_paths.append(os.path.join(root, name))\n",
-    "\n",
-    "assert len(test_file_paths) == 151\n",
-    "print(test_file_paths)\n"
    ]
   },
   {
@@ -456,7 +430,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Train Global-Net and DAD-head"
+    "# 2. Joint training of Global-Net and DAD-head"
    ]
   },
   {
